exabgp (4.1.2-1) unstable; urgency=medium

  * New upstream release.

 -- Vincent Bernat <bernat@debian.org>  Sat, 21 Sep 2019 21:05:46 +0200

exabgp (4.0.8-1) unstable; urgency=medium

  * New upstream release.
    - Compatibility with Python 3.7. Closes: #904390.
  * d/patches: remove merged patches.

 -- Vincent Bernat <bernat@debian.org>  Tue, 24 Jul 2018 07:47:22 +0200

exabgp (4.0.6-2) unstable; urgency=medium

  * d/postinst: add exabgpcli to the alternative system.

 -- Vincent Bernat <bernat@debian.org>  Sat, 28 Apr 2018 20:24:37 +0200

exabgp (4.0.6-1) unstable; urgency=medium

  * New upstream release.
  * d/patches: drop all patches.
  * d/patches: add patch to fix BGP Flowspec tests.
  * d/patches: fix a decoding test.
  * d/rules: also run tests with Python 3.
  * d/rules: move exabgpcli as python*-exabgpcli.

 -- Vincent Bernat <bernat@debian.org>  Sat, 28 Apr 2018 16:45:39 +0200

exabgp (4.0.2-2) unstable; urgency=medium

  * d/control: build-depends on python*-pkg-resources. Closes: #880219.

 -- Vincent Bernat <bernat@debian.org>  Sat, 04 Nov 2017 13:59:49 +0100

exabgp (4.0.2-1) unstable; urgency=medium

  [ James Page ]
  * New upstream release (4.0.0).
  * Add Python 3 support:
    - d/control: Add python{3}-exabgp, exabgp-common packages.
    - d/exabgp-common.install: Install /usr/share/exabgp/*.
    - d/control,rules: Switch buildsystem to pybuild.
    - d/rules: Limit unit testing to Python 2 for now.
    - d/control: Add required BD's for Python 3 support.
    - d/python{3}-exabgp.{postinst,prerm}: Install exabgp binary
      using alternatives for Python 2 or Python 3 versions.
  * d/rules: Tidy etc/exabgp/exabgp.env on clean.

  [ Vincent Bernat ]
  * New upstream release (4.0.2).
  * Remove all patches.
  * d/control: bump Standards-Version.
  * d/control: remove exabgp-common package.
  * d/install: do not install content of qa/conf (doesn't exist anymore).
  * d/lintian-overrides: silence warning about upstart.