@@ -1,2 +1,0 @@
-# Manual page is just exabgp
-python-exabgp: binary-without-manpage usr/sbin/python2-exabgp
