@@ -1,12 +1,0 @@
-#!/bin/sh
-
-set -e
-
-if [ "$1" = "configure" ] ; then
-	update-alternatives --install /usr/sbin/exabgp exabgp /usr/sbin/python2-exabgp 100 \
-                            --slave /usr/sbin/exabgpcli exabgpcli /usr/sbin/python2-exabgpcli
-fi
-
-#DEBHELPER#
-
-exit 0
