@@ -1,11 +1,0 @@
-#!/bin/sh
-
-set -e
-
-if [ "$1" = "remove" ] ; then
-	update-alternatives --remove exabgp /usr/sbin/python2-exabgp
-fi
-
-#DEBHELPER#
-
-exit 0
